--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,21 @@
-
 services:
-  php-env:
-    build: .
-    volumes:
-      - ./:/var/www/html
+  web:
+    build:
+      dockerfile: Dockerfile
+    container_name: website
     ports:
-      - 9010:80
+      - "9080:80"
+    volumes:
+      - .:/var/www/html
     depends_on:
       - db
+    networks:
+      - app-network
 
-
-      
   db:
     image: mysql:8.3.0
     ports:
-      - '9008:80'
+      - '9008:3306'
     env_file:
       - .env
     environment:
@@ -24,7 +25,8 @@ services:
       MYSQL_PASSWORD: '${MYSQL_PASSWORD}'
     volumes:
       - db-data:/var/lib/mysql
-
+    networks:
+      - app-network
 
   phpmyadmin:
     image: phpmyadmin:5.2.1-apache
@@ -37,5 +39,16 @@ services:
       MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
       MYSQL_USER: '${MYSQL_USER}'
       MYSQL_PASSWORD: '${MYSQL_PASSWORD}'
+    networks:
+      - app-network
+
+
 volumes:
   db-data:
+
+
+# Definisikan jaringan untuk komunikasi antar kontainer
+networks:
+  app-network:
+    driver: bridge
+
